--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -4,14 +4,40 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:PoloniexBot.ViewModels"
-        xmlns:local="clr-namespace:PoloniexBot"
+        xmlns:local="clr-namespace:PoloniexBot" 
+        xmlns:models="clr-namespace:PoloniexBot.Models"
         mc:Ignorable="d"
-        Title="{Binding Title}" 
+        Title="Test" 
         Height="450" Width="800" >
-    <Window.DataContext>
-        <vm:MainWindowViewModel/>
-    </Window.DataContext>
     <Grid>
+    <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="0.8*" />
+    </Grid.ColumnDefinitions>
+    <ListBox Grid.Column="0" ItemsSource="{Binding Currencies}"
+                 SelectedItem="{Binding SelectedCoin}">
+        <ListBox.ItemTemplate>
+            <DataTemplate>
+                <StackPanel Margin="5">
+                    <TextBlock FontSize="18" Text="{Binding Path=Name}" />
+                    <TextBlock Text="{Binding Path=Values.available}" />
+                    <TextBlock Text="{Binding Path=Values.onOrders}" />
+                    <TextBlock Text="{Binding Path=Values.btcValue}" />
+                </StackPanel>
+            </DataTemplate>
+        </ListBox.ItemTemplate>
+    </ListBox>
 
+    <StackPanel Grid.Column="1" DataContext="{Binding SelectedCoin}">
+        <TextBlock Text="Выбранный элемент"  />
+        <TextBlock Text="Название" />
+            <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBlock Text="Доступное количество" />
+            <TextBox Text="{Binding Values.available, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBlock Text="В ордерах" />
+            <TextBox Text="{Binding Values.onOrders, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBlock Text="Значение в BTC" />
+            <TextBox Text="{Binding Values.btcValue, UpdateSourceTrigger=PropertyChanged}" />
+        </StackPanel>
     </Grid>
 </Window>
